--- a/index.Rmd
+++ b/index.Rmd
@@ -5,15 +5,12 @@ author:
 - Stephan Haug
 knit: "bookdown::render_book"
 site: bookdown::bookdown_site
-url: 'https\://stat545.com/'
-github-repo: rstudio-education/stat545
-#cover-image: assets/stat545-logo.png
 documentclass: book
 bibliography: [book.bib, packages.bib]
 biblio-style: apalike
 link-citations: yes
 description: "STAT 545: Data wrangling, exploration, and analysis with R."
-favicon: assets/favicon.ico
+#favicon: assets/favicon.ico
 always_allow_html: true
 
 ---
