--- a/09_import-export.Rmd
+++ b/09_import-export.Rmd
@@ -1,6 +1,8 @@
 # Daten I/O {#import-export}
 
-
+```{r include = FALSE}
+source("common.R")
+```
 
 
 ## Überblick
@@ -37,28 +39,17 @@ Wie passt das zu unserer Betonung der dynamischen Berichterstattung über R Mark
 
 Das Hauptpaket, das wir verwenden werden, ist [readr], welches Alternativen zu den Standardfunktionen `read.table()` und `write.table()` bietet. Trotzdem laden wir standardmäßig einfach wieder [tidyverse].
 
-
-```r
+```{r start_import_export}
 library(tidyverse)
-#> ── Attaching packages ─────────────────────────────────────────── tidyverse 1.3.0 ──
-#> ✓ ggplot2 3.3.2     ✓ purrr   0.3.4
-#> ✓ tibble  3.0.3     ✓ dplyr   1.0.2
-#> ✓ tidyr   1.1.2     ✓ stringr 1.4.0
-#> ✓ readr   1.3.1     ✓ forcats 0.5.0
-#> ── Conflicts ────────────────────────────────────────────── tidyverse_conflicts() ──
-#> x dplyr::filter() masks stats::filter()
-#> x dplyr::lag()    masks stats::lag()
 ```
 
 ## Einlesen der Gapminder Daten
 
 Die Gapminder Daten könnten wir natürlich wie zuvor über das Laden des `gapminder` Pakets verfügbar machen. Da es in diesem Abschnitt aber um das Einlesen von Daten geht, versuchen wir die Daten als `.tsv` Datei (tab-separated values - so sind sie im Paket gespeichert) einzulesen. Aber dies bedeutet natürlich, dass wir die entsprechende `.tsv` Datei erst mal finden müssen. Dabei hilft uns glücklicherweise das [fs] Paket.
 
-
-```r
+```{r}
 library(fs)
 (gap_tsv <- path_package("gapminder", "extdata", "gapminder.tsv"))
-#> /Users/hgstp/Library/R/4.0/library/gapminder/extdata/gapminder.tsv
 ```
 
 Nachdem wir jetzt den Speicherort der Datei kennen, können wir versuchen sie einzulesen.
@@ -68,27 +59,9 @@ Nachdem wir jetzt den Speicherort der Datei kennen, können wir versuchen sie ei
 
 Die Haupt-Funktion zum Einlesen von Daten in readr ist `read_delim()`. Hier verwenden wir eine Variante, `read_tsv()`, für tabulatorgetrennte Daten:
 
-
-```r
+```{r}
 gapminder <- read_tsv(gap_tsv)
-#> Parsed with column specification:
-#> cols(
-#>   country = col_character(),
-#>   continent = col_character(),
-#>   year = col_double(),
-#>   lifeExp = col_double(),
-#>   pop = col_double(),
-#>   gdpPercap = col_double()
-#> )
 glimpse(gapminder)
-#> Rows: 1,704
-#> Columns: 6
-#> $ country   <chr> "Afghanistan", "Afghanistan", "Afghanistan", "Afghanistan",…
-#> $ continent <chr> "Asia", "Asia", "Asia", "Asia", "Asia", "Asia", "Asia", "As…
-#> $ year      <dbl> 1952, 1957, 1962, 1967, 1972, 1977, 1982, 1987, 1992, 1997,…
-#> $ lifeExp   <dbl> 28.8, 30.3, 32.0, 34.0, 36.1, 38.4, 39.9, 40.8, 41.7, 41.8,…
-#> $ pop       <dbl> 8425333, 9240934, 10267083, 11537966, 13079460, 14880372, 1…
-#> $ gdpPercap <dbl> 779, 821, 853, 836, 740, 786, 978, 852, 649, 635, 727, 975,…
 ```
 
 
@@ -109,49 +82,28 @@ Die Gapminder-Daten sind zu sauber und einfach, um die großartigen Funktionen v
 
 Bevor wir etwas exportieren können, müssen (das ist natürlich so nicht richtig - niemand zwingt uns dazu) etwas berechnen, das es wert ist,  exportiert zu werden. Lass uns eine Zusammenfassung der maximalen Lebenserwartung auf Länderebene erstellen.
 
-
-```r
+```{r}
 gap_life_exp <- gapminder %>%
   group_by(country, continent) %>% 
   summarise(life_exp = max(lifeExp)) %>% 
   ungroup()
-#> `summarise()` regrouping output by 'country' (override with `.groups` argument)
 gap_life_exp
-#> # A tibble: 142 x 3
-#>    country     continent life_exp
-#>    <chr>       <chr>        <dbl>
-#>  1 Afghanistan Asia          43.8
-#>  2 Albania     Europe        76.4
-#>  3 Algeria     Africa        72.3
-#>  4 Angola      Africa        42.7
-#>  5 Argentina   Americas      75.3
-#>  6 Australia   Oceania       81.2
-#>  7 Austria     Europe        79.8
-#>  8 Bahrain     Asia          75.6
-#>  9 Bangladesh  Asia          64.1
-#> 10 Belgium     Europe        79.4
-#> # … with 132 more rows
 ```
 
 Das `gap_life_exp` data frame ist ein Beispiel für ein Zwischenergebnis, das wir für die Zukunft und für nachgelagerte Analysen oder Visualisierungen speichern wollen.
 
 Die Haupt-Exportfunktion in readr ist `write_delim()`. Für verschiedene Dateiformate gibt es auch hier wieder verschiedene Komfortfunktionen. Lass uns `write_csv()` benutzen, um eine kommagetrennte Datei zu erhalten.
 
-
-```r
+```{r}
 write_csv(gap_life_exp, "gap_life_exp.csv")
 ```
 
 Schauen wir uns die ersten paar Zeilen von `gap_life_exp.csv` an. Dazu kannst du entweder die Datei öffnen oder, im Terminal, `head` darauf anwenden.
 
-
-```
-country,continent,life_exp
-Afghanistan,Asia,43.828
-Albania,Europe,76.423
-Algeria,Africa,72.301
-Angola,Africa,42.731
-Argentina,Americas,75.32
+```{r echo = FALSE, comment = NA}
+"gap_life_exp.csv" %>%
+  readLines(n = 6) %>% 
+  cat(sep = "\n")
 ```
 
 Das sieht recht ordentlich aus, obwohl es keine sichtbare Ausrichtung oder Trennung in Spalten gibt. Hätten wir die Basisfunktion `read.csv()` benutzt, würden wir Zeilennamen und viele Anführungszeichen sehen, es sei denn, wir hätten diese Features explizit abgeschaltet. Das schönere Standardverhalten ist daher der Hauptgrund, warum wir `readr::write_csv()` gegenüber `write.csv()` bevorzugen.
@@ -182,23 +134,16 @@ Um mit APIs in R zu arbeiten, müssen wir ein paar neue Pakete laden (und vorher
 
 Vermutlich hast du die beiden Pakete bisher nicht installiert. Daher ist der erste Schritt die beiden Pakete zu installieren
 
-
-```r
+```{r, eval=FALSE}
 install.packages(c("httr", "jsonlite"))
 
 ```
 
 und anschließend zu laden
 
-
-```r
+```{r}
 library(httr)
 library(jsonlite)
-#> 
-#> Attaching package: 'jsonlite'
-#> The following object is masked from 'package:purrr':
-#> 
-#>     flatten
 ```
 
 
@@ -218,8 +163,7 @@ Als Beispiel werden wir mit der Open Notify API arbeiten, die Daten zu verschied
 
 Wir beginnen damit, dass wir unsere Anfrage mit der `GET()` Funktion stellen und die URL der API angeben:
 
-
-```r
+```{r}
 jdata <- GET("http://api.open-notify.org/astros.json")
 ```
 
@@ -230,14 +174,8 @@ Die Ausgabe der Funktion `GET()` ist eine Liste, die alle Informationen enthält
 
 Schauen wir uns einmal an, wie die Variable jdata in der R-Konsole aussieht:
 
-
-```r
+```{r}
 jdata
-#> Response [http://api.open-notify.org/astros.json]
-#>   Date: 2020-12-02 22:00
-#>   Status: 200
-#>   Content-Type: application/json
-#>   Size: 356 B
 ```
 
 Als erstes fällt auf, dass die URL enthalten ist, an die die GET-Anfrage gesendet wurde. Außerdem sehen wir das Datum und die Uhrzeit, zu der die Anfrage gestellt wurde, sowie die Größe der Antwort.
@@ -267,10 +205,8 @@ In ihrem aktuellen Zustand sind die Daten in der Variablen `jdata` nicht verwend
 Dazu müssen wir zunächst den rohen Unicode in Character Daten konvertieren, die dem oben gezeigten JSON-Format ähneln. Die Funktion `rawToChar()` führt genau diese Aufgabe aus:
 
 
-
-```r
+```{r}
 rawToChar(jdata$content)
-#> [1] "{\"message\": \"success\", \"number\": 7, \"people\": [{\"craft\": \"ISS\", \"name\": \"Sergey Ryzhikov\"}, {\"craft\": \"ISS\", \"name\": \"Kate Rubins\"}, {\"craft\": \"ISS\", \"name\": \"Sergey Kud-Sverchkov\"}, {\"craft\": \"ISS\", \"name\": \"Mike Hopkins\"}, {\"craft\": \"ISS\", \"name\": \"Victor Glover\"}, {\"craft\": \"ISS\", \"name\": \"Shannon Walker\"}, {\"craft\": \"ISS\", \"name\": \"Soichi Noguchi\"}]}"
 ```
 
 
@@ -280,35 +216,21 @@ Ausgehend von diesem Character Vektor können wir nun mit `fromJSON()` aus dem `
 
 Die `fromJSON()` Funktion benötigt einen Character Vektor, der die JSON-Struktur enthält, die wir aus der Ausgabe von `rawToChar()` erhalten haben. Wenn wir also diese beiden Funktionen aneinanderreihen, erhalten wir die gewünschten Daten in einem Format, das wir in R leichter bearbeiten können.
 
-
-```r
+```{r}
 data <-  fromJSON(rawToChar(jdata$content))
 glimpse(data)
-#> List of 3
-#>  $ message: chr "success"
-#>  $ number : int 7
-#>  $ people :'data.frame':	7 obs. of  2 variables:
-#>   ..$ craft: chr [1:7] "ISS" "ISS" "ISS" "ISS" ...
-#>   ..$ name : chr [1:7] "Sergey Ryzhikov" "Kate Rubins" "Sergey Kud-Sverchkov""..
 ```
 
 Die Liste `data` hat drei Elemente. Uns interessiert in erster Linie das Data Frame `people`.
 
-
-```r
+```{r}
 data$people
-#>   craft                 name
-#> 1   ISS      Sergey Ryzhikov
-#> 2   ISS          Kate Rubins
-#> 3   ISS Sergey Kud-Sverchkov
-#> 4   ISS         Mike Hopkins
-#> 5   ISS        Victor Glover
-#> 6   ISS       Shannon Walker
-#> 7   ISS       Soichi Noguchi
+
 ```
 
 
-Also, da haben wir unsere Antwort: Zum Zeitpunkt des letzten Updates Wed Dec  2 23:00:59 2020 von R4ews befanden sich 7 Personen im Weltraum. Aber wenn du alles selbst ausprobierst, könnten es auch schon wieder andere Namen und eine andere Anzahl sein. Das ist einer der Vorteile von APIs - im Gegensatz zu herunterladbaren Datensätzen werden sie im Allgemeinen in Echtzeit oder nahezu in Echtzeit aktualisiert, so dass sie eine großartige Möglichkeit darstellen, Zugang zu sehr aktuellen Daten zu erhalten.
+Also, da haben wir unsere Antwort: Zum Zeitpunkt des letzten Updates `r date()
+` von R4ews befanden sich `r nrow(data$people)` Personen im Weltraum. Aber wenn du alles selbst ausprobierst, könnten es auch schon wieder andere Namen und eine andere Anzahl sein. Das ist einer der Vorteile von APIs - im Gegensatz zu herunterladbaren Datensätzen werden sie im Allgemeinen in Echtzeit oder nahezu in Echtzeit aktualisiert, so dass sie eine großartige Möglichkeit darstellen, Zugang zu sehr aktuellen Daten zu erhalten.
 
 
 In diesem Beispiel haben wir einen sehr unkomplizierten API-Workflow durchlaufen. Die meisten APIs erfordern, dass Sie demselben allgemeinen Muster folgen, aber dabei können sie durchaus komplexer sein.
@@ -323,8 +245,7 @@ Wir müssen den Längen- und Breitengrad des Ortes angeben, nach dem wir im Rahm
 
 Lass uns die API verwenden, um herauszufinden, wann die ISS Garching (auf 48.24896 Breiten- und  11.65101 Längengrad) passieren wird:
 
-
-```r
+```{r}
 jdata <-  GET("http://api.open-notify.org/iss-pass.json",
     query = list(lat = 48.24896, lon = 11.65101))
 ```
@@ -335,28 +256,17 @@ Man muss in der Dokumentation für die API, mit man arbeiten will, nachsehen, ob
 Wie auch immer, jetzt, da wir unsere Anfrage einschließlich der Standortparameter gestellt haben, können wir die Antwort mit den gleichen Funktionen überprüfen, die wir zuvor verwendet haben. Lass uns die Daten aus der Antwort extrahieren:
 
 
-
-```r
+```{r}
 data <- fromJSON(rawToChar(jdata$content))
 data$response
-#>   duration   risetime
-#> 1      529 1606995479
-#> 2      650 1607001192
-#> 3      651 1607007003
-#> 4      651 1607012831
-#> 5      647 1607018643
 ```
 
 
 
 Diese API gibt uns Zeiten in Form von [Unixzeit](https://de.wikipedia.org/wiki/Unixzeit) zurück. Unixzeit ist die Zeitspanne, die seit dem 1. Januar 1970 vergangen ist. Mithilfe der Funktion `as_datetime()` aus dem [lubridate] Paket können wir die Unixzeit aber leicht umrechnen
 
-
-```r
+```{r}
 lubridate::as_datetime(data$response$risetime)
-#> [1] "2020-12-03 11:37:59 UTC" "2020-12-03 13:13:12 UTC"
-#> [3] "2020-12-03 14:50:03 UTC" "2020-12-03 16:27:11 UTC"
-#> [5] "2020-12-03 18:04:03 UTC"
 ```
 
 
@@ -372,109 +282,6 @@ Hier sein noch auf das Kapitel [Data import](http://r4ds.had.co.nz/data-import.h
 
 
 
+```{r links, child="links.md"}
 
-<!--STAT 545 external resources/content-->
-[useR-2014-dropbox]: https://www.dropbox.com/sh/i8qnluwmuieicxc/AAAgt9tIKoIm7WZKIyK25lh6a
-[Tidy data using Lord of the Rings]: https://github.com/jennybc/lotr-tidy#readme
-[ggplot2 tutorial]: https://github.com/jennybc/ggplot2-tutorial
-[R Graph Catalog]: https://github.com/jennybc/r-graph-catalog
-
-<!--Packages: main link-->
-[dplyr]: https://dplyr.tidyverse.org
-[tidyr]: https://tidyr.tidyverse.org
-[ggplot2]: https://ggplot2.tidyverse.org
-[tidyverse]: https://tidyverse.tidyverse.org
-[stringr]: https://stringr.tidyverse.org
-[forcats]: https://forcats.tidyverse.org
-[purrr]: https://purrr.tidyverse.org
-[readr]: https://readr.tidyverse.org
-[fs]: https://fs.r-lib.org/index.html
-[glue]: https://glue.tidyverse.org
-[testthat]: https://testthat.r-lib.org
-[ellipsis]: https://ellipsis.r-lib.org
-[lubridate]: https://lubridate.tidyverse.org
-[devtools]: https://devtools.r-lib.org
-[roxygen2]: https://roxygen2.r-lib.org
-[knitr]: https://github.com/yihui/knitr
-[rmarkdown]: https://rmarkdown.rstudio.com/
-[usethis]: https://usethis.r-lib.org
-[xml2]: https://xml2.r-lib.org
-[httr]: https://httr.r-lib.org
-[rvest]: https://rvest.tidyverse.org
-[Shiny]: https://shiny.rstudio.com
-[gh]: https://github.com/r-lib/gh
-[plyr]: http://plyr.had.co.nz
-[magrittr]: https://magrittr.tidyverse.org
-[googlesheets]: https://github.com/jennybc/googlesheets
-[gapminder]: https://github.com/jennybc/gapminder
-[stringi]: http://www.gagolewski.com/software/stringi/
-[rex]: https://github.com/kevinushey/rex
-[lattice]: http://lattice.r-forge.r-project.org
-[RColorBrewer]: https://cloud.r-project.org/package=RColorBrewer
-[gridExtra]: https://cloud.r-project.org/package=gridExtra
-[rebird]: https://docs.ropensci.org/rebird/
-[geonames]: https://docs.ropensci.org/geonames/
-[rplos]: https://docs.ropensci.org/rplos/
-[gender]: https://docs.ropensci.org/gender/
-[genderdata]: https://docs.ropensci.org/genderdata/
-[curl]: https://jeroen.cran.dev/curl
-[jsonlite]: https://github.com/jeroen/jsonlite
-[shinythemes]: https://rstudio.github.io/shinythemes/
-[shinyjs]: https://deanattali.com/shinyjs/
-[leaflet]: https://rstudio.github.io/leaflet/
-[ggvis]: https://ggvis.rstudio.com
-[shinydashboard]: https://rstudio.github.io/shinydashboard/
-
-<!--Packages: vignettes & CRAN/GitHub links-->
-[Introduction to dplyr]: https://dplyr.tidyverse.org/articles/dplyr.html
-[Window functions]: https://dplyr.tidyverse.org/articles/window-functions.html
-[Two-table verbs]: https://dplyr.tidyverse.org/articles/two-table.html
-[Do more with dates and times in R]: https://lubridate.tidyverse.org/articles/lubridate.html
-[dplyr-cran]: https://cloud.r-project.org/package=dplyr
-[dplyr-github]: https://github.com/hadley/dplyr
-
-<!--Bookdowns: main link-->
-[Happy Git and GitHub for the useR]: https://happygitwithr.com
-[R for Data Science]: https://r4ds.had.co.nz
-[The tidyverse style guide]: https://style.tidyverse.org
-[Advanced R]: http://adv-r.had.co.nz
-[Tidyverse design principles]: https://principles.tidyverse.org
-[R Packages]: https://r-pkgs.org/index.html
-[R Graphics Cookbook]: http://shop.oreilly.com/product/0636920023135.do
-[Cookbook for R]: http://www.cookbook-r.com 
-[ggplot2: Elegant Graphics for Data Analysis]: https://ggplot2-book.org/index.html
-
-<!--Bookdowns: specific chapters-->
-[adv-r-fxn-args]: http://adv-r.had.co.nz/Functions.html#function-arguments
-[r4ds-transform]: https://r4ds.had.co.nz/transform.html
-[r4ds-readr-strings]: https://r4ds.had.co.nz/data-import.html#readr-strings
-
-<!--RStudio Cheat Sheets--> 
-[RStudio Data Transformation Cheat Sheet]: https://github.com/rstudio/cheatsheets/raw/master/data-transformation.pdf
-[Regular Expressions in R Cheat Sheet]: https://github.com/rstudio/cheatsheets/raw/master/regex.pdf
-[Shiny Cheat Sheet]: https://shiny.rstudio.com/articles/cheatsheet.html
-
-<!--Blog posts, slides, & papers-->
-["minimal make: a minimal tutorial on make"]: https://kbroman.org/minimal_make/
-["Let the Data Flow: Pipelines in R with dplyr and magrittr"]: https://github.com/tjmahr/MadR_Pipelines
-["Hands-on dplyr tutorial for faster data manipulation in R"]: https://www.dataschool.io/dplyr-tutorial-for-faster-data-manipulation-in-r/
-["Writing R Extensions"]: https://cloud.r-project.org/doc/manuals/r-release/R-exts.html
-["The Absolute Minimum Every Software Developer Absolutely, Positively Must Know About Unicode and Character Sets (No Excuses!)"]: https://www.joelonsoftware.com/2003/10/08/the-absolute-minimum-every-software-developer-absolutely-positively-must-know-about-unicode-and-character-sets-no-excuses/
-["What Every Programmer Absolutely, Positively Needs To Know About Encodings And Character Sets To Work With Text"]: http://kunststube.net/encoding/
-["3 Steps to Fix Encoding Problems in Ruby"]: https://www.justinweiss.com/articles/3-steps-to-fix-encoding-problems-in-ruby/
-["My favorite RGB color"]: https://manyworldstheory.com/2013/01/15/my-favorite-rgb-color/
-
-<!--Papers/Books Cited-->
-["Dates and Times Made Easy with lubridate"]: https://www.jstatsoft.org/article/view/v040i03
-["testthat: Get Started with Testing"]: https://journal.r-project.org/archive/2011-1/RJournal_2011-1_Wickham.pdf
-["Let's Practice What We Preach"]: https://www.jstor.org/stable/3087382?seq=1#page_scan_tab_contents
-[Creating More Effective Graphs]: https://www.amazon.com/Creating-Effective-Graphs-Naomi-Robbins/dp/0985911123
-["Escaping RGBland: Selecting Colors for Statistical Graphs"]: https://eeecon.uibk.ac.at/~zeileis/papers/Zeileis+Hornik+Murrell-2009.pdf
-["A layered grammar of graphics"]: https://vita.had.co.nz/papers/layered-grammar.html
-[Managing Projects with GNU Make, 3rd Edition]: http://shop.oreilly.com/product/9780596006105.do
-["Why Should Engineers and Scientists Be Worried About Color?"]: https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=2&cad=rja&uact=8&ved=2ahUKEwi0xYqJ8JbjAhWNvp4KHViYDxsQFjABegQIABAC&url=https%3A%2F%2Fwww.researchgate.net%2Fprofile%2FAhmed_Elhattab2%2Fpost%2FPlease_suggest_some_good_3D_plot_tool_Software_for_surface_plot%2Fattachment%2F5c05ba35cfe4a7645506948e%2FAS%253A699894335557644%25401543879221725%2Fdownload%2FWhy%2BShould%2BEngineers%2Band%2BScientists%2BBe%2BWorried%2BAbout%2BColor_.pdf&usg=AOvVaw1qwjjGMd7h_z6TLUjzu7Nb
-
-<!--Misc.-->
-[rOpenSci]: https://ropensci.org
-[wiki-snake-case]: https://en.wikipedia.org/wiki/Snake_case
-[Janus]: https://en.wikipedia.org/wiki/Janus
+```
