--- a/book.bib
+++ b/book.bib
@@ -156,7 +156,7 @@
 
 @book{wickham2015a,
   title={Advanced R},
-  author={Wickham, H},
+  author={Wickham, Hadley},
   isbn={9781498759809},
   series={Chapman \& Hall/CRC The R Series},
   url={https://books.google.com/books?id=FfsYCwAAQBAJ},
