--- a/10_ggplot2_intro.Rmd
+++ b/10_ggplot2_intro.Rmd
@@ -68,9 +68,9 @@ gapminder %>%
 In diesem einfachen Beispiel haben wir bereits gesehen, dass `ggplot()` über den Pipe-Operator verknüpft werden kann.
 
 
+# Bausteine
 
-
-#  Aesthetics {#aes}
+##  Aesthetics {#aes}
 
 Mit der Funktion `aes()` lässt sich das **Aussehen** der Grafik regeln (nicht der Inhalt). Wir können z.B.
 
@@ -142,7 +142,7 @@ gapminder %>%
 
 
 
-# Geoms {#geoms}
+## Geoms {#geoms}
 
 Mit den `geom_xx()` Funktionen stellen wir die Daten als geometrische Formen in einer Grafik dar. Jede `ggplot2` Grafik benötigt daher mindestens ein `geom`. Beispiele sind
 
@@ -221,7 +221,7 @@ gapminder %>%
 ```
 
 
-# Statistische Transformationen {#stat-trans}
+## Statistische Transformationen {#stat-trans}
 
 Jede `geom_xx()` Funktion besitzt eine Default Statistik, die berechnet wird.
 
@@ -294,7 +294,7 @@ ggplot(gapminder, aes(x = continent, y = ..prop..)) +
 
 
 
-# scales
+## scales
 
 
 Scales steuern die Zuordnung von Daten zu aesthetics. Sie nehmen deine Daten und bestimmen damit Größe, Farbe, Position oder Form von Objekten. Sie erlauben dir auch die Achsen und die Legend nach deinen Vorstellungen anzupassen. Du kannst sicher mit `ggplot2` Grafiken erstellen, ohne zu wissen, wie `scales` funktionieren, aber wenn du `scales` verstehst und lernst, wie du sie einstellen kannst, wirst du viel mehr Kontrolle über deine Grafiken bekommen.
@@ -369,7 +369,7 @@ Für weitere Optionen sei hier auf die [online Version](https://ggplot2-book.org
 
 
 
-# facets
+## facets
 
 Datensätze lassen sich oftmals bzgl. vorhandener Variablen gruppieren. Dann will man Zusammenhänge weiterer Variablen innerhalb dieser Gruppen darstellen. Entsteht die Gruppierung aufgrund einer Variable, so kannst du mit `facet_wrap()` arbeiten
 
@@ -407,7 +407,7 @@ gapminder %>%
 
 Für Ozeanien erhalten wir so z.B. eine Unterteilung in Australien (`TRUE`) und Neuseeland (`FALSE`).
 
-# themes
+## themes
 
 Abschließend wollen wir noch über verschiedene `themes` sprechen. Über `themes` kann man das Aussehen der nicht datenbezogenen Elemente einer Grafik verändern, wie z.B.
 
