--- a/index.Rmd
+++ b/index.Rmd
@@ -23,14 +23,14 @@ library(devtools)
 library(DT)
 ```
 
-Willkommen zur __R Ergänzung zur Einführung in die Wahrscheinlichkeitstheorie und Statistik__. Im Rahmen dieser Ergänzung lernen wir
+Willkommen zur __R Ergänzung zur Einführung in die Wahrscheinlichkeitstheorie und Statistik__. Im Rahmen dieser Ergänzung lernen wir erste Schritte, wie wir
 
-:::: {.content-box-green}
-Daten untersuchen, aufbereiten, visualisieren und analysieren,
+:::: {.content-box-orange}
+Daten aufbereiten, visualisieren und analysieren. `r emo::ji("rocket")`
 ::::
 
 
-Wir wollen all das reproduzierbar, wiederverwendbar und gemeinsam nutzbar machen, und vor allem wollen wir alles mit __R__ machen.
+All das wollen wir reproduzierbar und auch wiedervendbar machen. Und vor allem, wollen wir alles mit [__R__](www.r-project.org) machen.
 
 Auf dieser Website geht es um alles, was bei der Datenanalyse 
 auftaucht **außer um statistische Modellierung und Schlussfolgerungen**. Dieser Teil der statistischen Analyse erfolgt in der Vorlesung *Einführung in die Wahrscheinlichkeitstheorie und Statistik*. 
@@ -39,7 +39,7 @@ auftaucht **außer um statistische Modellierung und Schlussfolgerungen**. Dieser
 Das Design von R4ews wurde durch die Notwendigkeit motiviert, mehr Ausgewogenheit in der angewandten statistischen Ausbildung zu schaffen. Datenanalysten verbringen viel Zeit mit der Projekt-Organisation, der Datenbereinigung und -aufbereitung sowie der Kommunikation. Diese Tätigkeiten können einen tiefgreifenden Einfluss auf die Qualität und Glaubwürdigkeit einer Analyse haben. Dennoch werden diese Fähigkeiten selten vermittelt, obwohl sie so wichtig und notwendig sind. R4ews versucht diese Lücke etwas zu verkleinern.
 
 
-::: {content-box-red}
+::: {.content-box-red}
 Das Material wird kontinuierlich über das Semester hinweg ergänzt/erweitert/verbessert.
 :::
 
