typos basics vc

--- a/02_r-basics.Rmd
+++ b/02_r-basics.Rmd
@@ -282,13 +282,13 @@ Kommentare beginnen mit einem oder mehreren `#`-Symbolen. Verwendet Kommentare. 
 Dieser __Workflow__ wird euch in Zukunft gute Dienste leisten:
 
 ::: {.content-box-green}
-* Erstelle ein RStudio Projekt für ein analytisches Projekt
-* Speichere alle Input Dateien innerhalb des Projekts (wir werden bald über den Import sprechen)
-* Bewahre alle Skripte zu diesem Projekt dort auf; bearbeite sie und führen sie dort aus
-* Speichere den Output innerhalb des Projekts (wie z.B. das PDF im letzten Beispiel)
+* erstelle ein RStudio Projekt für jedes neue R "Vorhaben"
+* speichere alle Input Dateien innerhalb des Projekts (wir werden bald über den Import sprechen)
+* bewahre alle Skripte zu diesem Projekt dort auf; bearbeite sie und führen sie dort aus
+* speichere den Output innerhalb des Projekts (wie z.B. das PDF im letzten Beispiel)
 :::
 
-Ihr solltet vermeiden die Maus für Teile des Workflows zu verwenden, wie z.B. das Laden eines Datensatzes oder das Speichern einer Grafik. Das ist sehr wichtig für die Reproduzierbarkeit und um im Nachhinein feststellen zu können, wie eine numerische Tabelle oder eine PDF-Datei tatsächlich erzeugt wurde (eine Suche auf der lokalen Festplatte nach dem entsprechenden Dateinamen unter den `.R`-Dateien führt zum entsprechenden Skript).
+Ihr solltet vermeiden die Maus für Teile des Workflows zu verwenden, wie z.B. das Laden eines Datensatzes oder das Speichern einer Grafik. Das ist sehr wichtig für die Reproduzierbarkeit und um im Nachhinein feststellen zu können, wie eine numerische Tabelle oder eine PDF-Datei tatsächlich erzeugt wurde.
 
 
 ```{r end_rbasics, include = FALSE}
