--- a/05_data-care-feeding.Rmd
+++ b/05_data-care-feeding.Rmd
@@ -12,34 +12,34 @@ set.seed(4561)
 ```
 
 
-Jetzt ist es an der Zeit, sich zu vergewissern in welchem Verzeichnis auf deinem Computer du dich befindest. Falls du ein  [RStudio Projekt](#rprojs) nutzt, sollte diese Frage leicht zu beantworten sein. Falls du trotzdem unsicher bist, gib `getwd()` in der Konsole ein, um das aktuelle Arbeitsverzeichnis zu sehen.
+Jetzt ist es an der Zeit, sich zu vergewissern in welchem Verzeichnis ihr auf eurem Computer ihr euch befindet. Falls ihr ein  [RStudio Projekt](#rprojs) nutzt, sollte diese Frage leicht zu beantworten sein. Falls ihr trotzdem unsicher seid, gebt `getwd()` in der Konsole ein, um das aktuelle Arbeitsverzeichnis zu sehen.
 
-Alle nachfolgenden Code Beispiele wollen wir abspeichern in einer `.R` Datei, die wir im aktuellen Arbeitsverzeichnis abspeichern wollen. Idealerweise geben wir dieser Datei noch einen Namen, wie etwa `datenanalyse_teil_1.R`, der uns schon viel über den möglichen Inhalt erzählt.
+Alle nachfolgenden Code Beispiele wollen wir in einer `.R` Datei abspeichern, die dann im aktuellen Arbeitsverzeichnis gespeichert werden soll. Idealerweise geben wir dieser Datei noch einen Namen, wie etwa `datenanalyse_teil_1.R`, der uns schon viel über den möglichen Inhalt erzählt.
 Alternativ können wir alle Befehle natürlich auch in eine R Markdown Datei schreiben, siehe [Test drive R Markdown](#r-markdown).
 
 
-Prinzipiell geht es in den folgenden Abschnitten um Datenmanagement. Es werden aber auch immer wieder ein paar Grafiken zu sehen sein. Dies ist aber kein Problem, da wir ja bereits den [Data Visualization Basics Primer](https://rstudio.cloud/learn/primers/1.1)
+Prinzipiell geht es in den folgenden Abschnitten um Datenmanagement. Es werden aber auch immer wieder ein paar Grafiken zu sehen sein. Dies ist aber kein Problem, da ihr ja bereits den [Data Visualization Basics Primer](https://rstudio.cloud/learn/primers/1.1)
 
 ```{r, echo=FALSE, out.width="100%"}
 knitr::include_graphics("img/data_vis_basics.png")
 ```
 
-besucht haben und so den nötigen Background haben.
+besucht habt und somit den nötigen Background besitzt.
 
 ## Data Frames sind fantastisch
 
-Das Standardformat für Daten ist ein data frame. Die meisten Funktionen zur Inferenz, Modellierung und graphischen Darstellung erwarten, dass ihnen über ein `data =` Argument ein data frame übergeben wird. Dies gilt für die Basis R schon seit langem.
+Das Standardformat für Daten ist ein data frame. Die meisten Funktionen zur Inferenz, Modellierung und graphischen Darstellung erwarten, dass ihnen über ein `data =` Argument ein data frame übergeben wird. Dies gilt für Funktion aus der R Basisdistribution schon seit langem.
 
 Die als [tidyverse] bekannte Kollektion von Paketen geht noch einen Schritt weiter und priorisiert ausdrücklich die Verarbeitung von data frames. Tatsächlich priorisiert [tidyverse] eine besondere Art von data frames, die als "tibble" bezeichnet wird.
 
-Data frames - im Gegensatz zu allgemeinen Arrays oder speziell Matrizen in R - können Variablen unterschiedlicher Typen enthalten, wie z. B. Textdaten (Subjekt-ID oder Name), quantitative Daten (Anzahl der weißen Blutkörperchen) und kategoriale Informationen (behandelt vs. unbehandelt). Genauer gesagt können in data frames unterschiedliche Spalten aus unterschiedlichen Datentypen bestehen. Innerhalb einer Spalte müssen aber alle Einträge vom gleichen Typ sein.
+Data frames - im Gegensatz zu allgemeinen Arrays oder speziell Matrizen  - können Variablen unterschiedlicher Typen enthalten, wie z.B. Textdaten (Subjekt-ID oder Name), quantitative Daten (Anzahl der weißen Blutkörperchen) und qualitative/kategoriale Informationen (behandelt vs. unbehandelt). Genauer gesagt können in data frames unterschiedliche Spalten aus unterschiedlichen Datentypen bestehen. Innerhalb einer Spalte müssen aber alle Einträge vom gleichen Typ sein.
 
-Daten aus einer Datenanalyse bestehen immer aus mehr als einem Datentyp. Aus diesem Grund können Matrizen oder Arrays nicht zur Datenanalyse verwendet werden, da man sonst mit verschiedenen, unverbundenen Objekten (Matrizen, Arrays) arbeiten müsste und diese nur schwer koordinieren kann.
+Daten aus einer Datenanalyse bestehen immer aus mehr als einem Datentyp. Aus diesem Grund eigenen sich Matrizen oder Arrays nicht zur Datenanalyse, da man sonst mit verschiedenen, unverbundenen Objekten (Matrizen, Arrays) arbeiten müsste und diese nur schwer koordinieren kann.
 
 
 ## Gapminder data
 
-Wir werden mit einigen der Daten aus dem [Gapminder-Projekt] (https://www.gapminder.org) 
+Wir werden mit einem Teil der Daten aus dem [Gapminder-Projekt](https://www.gapminder.org) 
 
 ```{r, echo=FALSE, fig.align='center'}
 knitr::include_graphics("img/gapminder.png")
@@ -57,9 +57,26 @@ Um die Daten zu verwenden, müssen wir das Paket natürlich auch noch laden
 library(gapminder)
 ```
 
+
+::: {.content-box-gray}
+Gapminder wurde von Hans, Anna und Ola Rosling gegründet. Auf der Webseite des Projekts findet man nicht nur viel Informatives, sondern auch sehr Unterhaltsames
+
+
+```{r, echo=FALSE}
+knitr::include_url("https://www.youtube.com/embed/Sm5xF-UYgdg")
+```
+
+
+Leider ist Hans Rosling bereits 2017 verstorben.
+
+
+:::
+
+
+
 ## Die `gapminder` Daten sind ein "tibble"
 
-Durch das Laden des `gapminder` Pakets haben wir nun Zugriff auf einen Datenobjekt mit demselben Namen. Schau dir nun mithilfe der Funktion `str()` die Struktur des Objekts an.
+Durch das Laden des `gapminder` Pakets haben wir nun Zugriff auf einen Datenobjekt mit demselben Namen. Schauen wir uns mithilfe der Funktion `str()` mal die Struktur dieses Objekts an.
 
 ```{r message = FALSE, warning = FALSE}
 str(gapminder)
@@ -68,9 +85,9 @@ str(gapminder)
 `str()` liefert eine vernünftige Beschreibung von fast allem, und im schlimmsten Fall kann tatsächlich auch nichts "Schlimmes" passieren. Aus dem Output erkennen wir, dass der Datensatz `r nrow(gapminder)` Beobachtungen enthält.
 
 
-Auf der anderen Seite hätten wir durch direkten Aufruf von `gapminder` den Inhalt auch direkt auf den Bildschirm schreiben können. Aber vielleicht hast du schon mal einen größeren Datensatz aufgerufen und zögerst nun etwas, da große Datensätze einfach die Konsole füllen und nur sehr wenig Einblick bieten.
+Auf der anderen Seite hätten wir durch direkten Aufruf von `gapminder` den Inhalt auch direkt auf den Bildschirm schreiben können. Aber vielleicht habt ihr schon mal einen größeren Datensatz aufgerufen und zögert nun etwas, da große Datensätze tendenziell einfach die Konsole füllen und nur sehr wenig Einblick bieten.
 
-Dies ist der erste große Sieg für **tibbles**. Tidyverse bietet eine spezielle data frame Variante an: ein "tibble". Dies wird auch verdeutlicht, wenn man sich z.B. die Klasse des `gapminder` Objekts anschaut
+Tidyverse bietet eine spezielle data frame Variante an: ein __tibble__. `gapminder` ist ein ein tibble. Das sieht man auch, wenn man sich die Klasse dieses Objekts anzeigen lässt
 
 
 
@@ -78,17 +95,20 @@ Dies ist der erste große Sieg für **tibbles**. Tidyverse bietet eine spezielle
 class(gapminder)
 ```
 
-Schau, es ist immer noch ein reguläres data frame, aber eben auch ein tibble.
+Es ist immer noch ein reguläres data frame, aber zusätzlich eben auch ein tibble.
 
 
 
-Jetzt können wir `gapminder` einfach auf den Bildschirm anzeigen! Da es sich um ein tibble handelt, wird nur das Wichtigste angezeigt und deine Konsole läuft nicht voll.
+Wenn wir nun `gapminder` einfach auf den Bildschirm ausgeben, sehen wir, dass die Konsole nicht voll läuft.
 
 ```{r}
 gapminder
 ```
 
-Wenn du mit einem reinen data frame arbeitest - und dieses Feature magst - kannst du es mit `as_tibble()` in ein tibble transformieren.
+Dies ist der erste große Vorteil eines **tibbles** gegenüber einem data frame.
+
+
+Wenn ihr mit einem reinen data frame arbeitet - und dieses Feature gefällt euch - so könnt ihr es mit `as_tibble()` in ein tibble transformieren.
 
 ```{r, message=FALSE}
 library(tidyverse)
@@ -105,7 +125,7 @@ dim(gapminder)
 nrow(gapminder)
 ```
 
-Ein bisschen deskriptive Statistik zum Inhalt eines data frames erhältst du mit `summary()`:
+Ein bisschen _deskriptive Statistik_ zum Inhalt eines data frames erhält man mit der `summary()` Funktion:
 
 ```{r}
 summary(gapminder)
